# powersplit

./: .env.example  .gitignore  CONVERSATION_STATE_IMPLEMENTATION.md  DATABASE_SETUP.md  ENVIRONMENT_SETUP.md  MAIN_APPLICATION_ORCHESTRATOR.md  README.md  download_twilio_media.py  pyproject.toml  run_server.py  test_bill_splitter_simple.py  test_error_handling_simple.py  test_payment_request_simple.py  test_upi_simple.py  validate_ai_service.py  validate_bill_extractor.py  validate_bill_query_service.py  validate_bill_splitter.py  validate_contact_manager.py  validate_conversation_state.py  validate_error_handling.py  validate_main_orchestrator.py  validate_payment_confirmation.py  validate_payment_request_service.py  validate_upi_service.py
.cursor/: context.md
alembic/: env.py
app/: __init__.py  main.py
docs/: AI_SERVICE_INTEGRATION.md  BILL_EXTRACTOR.md  BILL_QUERY_SERVICE.md  CONTACT_MANAGER.md  PAYMENT_CONFIRMATION_SERVICE.md  PAYMENT_REQUEST_SERVICE.md  SIREN_INTEGRATION.md  UPI_SERVICE.md
examples/: ai_service_example.py  bill_extractor_example.py  bill_query_service_example.py  bill_splitter_example.py  contact_manager_example.py  payment_confirmation_example.py  payment_request_service_example.py  siren_integration_example.py  upi_service_example.py
tests/: test_ai_service.py  test_bill_extraction_integration.py  test_bill_extractor.py  test_bill_query_service.py  test_bill_splitter.py  test_contact_manager.py  test_contact_manager_integration.py  test_conversation_integration.py  test_conversation_state.py  test_database_setup.py  test_error_handling_comprehensive.py  test_payment_confirmation_service.py  test_payment_request_service.py  test_siren_integration.py  test_upi_service.py
(+61 files in other folders)
