[project]
name = "bill-splitting-agent"
version = "0.1.0"
description = "Intelligent WhatsApp-based bill splitting system using AI-powered processing"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "httpx>=0.25.2,<1.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "alembic>=1.13.0,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "litellm>=1.0.0,<2.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "pillow>=10.0.0,<11.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
start-server = "app.main:main"
db-manage = "app.database.cli:db"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
ruff = "^0.1.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.poetry]
package-mode = false
